--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,5 @@
 <br>
-<h1 class="heading"> Showing all Questions on <i class="fas fa-gem"></i> </h1>
+<h1 class="heading"> Showing all Questions on Ruby <i class="fas fa-gem"></i> </h1>
 
 <div class="container">
  <div class="row">
@@ -22,8 +22,8 @@
 
 <% if signed_in? && question.user == current_user%>
 <div class="links">
-   <%= link_to "#{fa_icon("pen-square")}".html_safe, edit_question_path(question), :title => 'Edit Question', :rel => 'tooltip', "data-placement" => "bottom"%>
-   <%= link_to "#{fa_icon("trash")}".html_safe, question, method: :delete, data: {confirm: "Are you sure you'd like to delete this post?", :title => 'Delete Question', :rel => 'tooltip', "data-placement" => "bottom"}  %>
+   <%= link_to "#{fa_icon("pen")}".html_safe, edit_question_path(question), :title => 'Edit Question', :rel => 'tooltip', "data-placement" => "bottom"%>
+   <%= link_to "#{fa_icon("times")}".html_safe, question, method: :delete, data: {confirm: "Are you sure you'd like to delete this post?"} , :title => 'Delete Question', :rel => 'tooltip', "data-placement" => "bottom"  %>
 </div>
 <br>
   <% end %> 
